Some spacing issues on mobile

--- a/css/folium.css
+++ b/css/folium.css
@@ -33,7 +33,7 @@ h6 {
   font-weight: 100; }
 
 h2 {
-  font-size: 1.9rem; }
+  font-size: 1.7rem; }
 
 p {
   font-size: 16px;
