--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -38,7 +38,7 @@ h6 {
     @include sans-serif-font;
 }
 h2 {
-	font-size: 1.9rem;
+	font-size: 1.7rem;
 }
 
 p {
